--- a/ansible/ec2_deploy.yml
+++ b/ansible/ec2_deploy.yml
@@ -5,7 +5,7 @@
   tasks:
     - name: Launch EC2 instance
       ec2:
-        instance_type: t2.micro
+        instance_type: t2.small
         image: ami-042e8287309f5df03
         region: us-east-1
         key_name: devops
