--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,7 @@ jobs:
          paths:
             - .
   deploy:
+     <<: *vse
      docker:
        - image: ansible/ansible:ubuntu1604
          environment:
