--- a/ansible/ec2_deploy.yml
+++ b/ansible/ec2_deploy.yml
@@ -3,6 +3,14 @@
   connection: local
 
   tasks:
+    - name: Register old EC2 instances for termination
+      ec2_instance_info:
+        region: us-east-1
+        aws_access_key: "{{ lookup('env', 'AWS_ACCESS_KEY_ID') }}"
+        aws_secret_key: "{{ lookup('env', 'AWS_SECRET_ACCESS_KEY') }}"
+        security_token: "{{ lookup('env', 'AWS_SESSION_TOKEN') }}"
+      register: old_instances
+
     - name: Launch EC2 instance
       ec2:
         instance_type: t2.small
@@ -57,3 +65,18 @@
       become: yes
     - wait_for:
         port: 80
+
+- name: Terminate old EC2 instances
+  hosts: localhost
+  connection: local
+
+  tasks:
+    - name: Terminate old instances
+      ec2:
+        region: us-east-1
+        state: absent
+        aws_access_key: "{{ lookup('env', 'AWS_ACCESS_KEY_ID') }}"
+        aws_secret_key: "{{ lookup('env', 'AWS_SECRET_ACCESS_KEY') }}"
+        security_token: "{{ lookup('env', 'AWS_SESSION_TOKEN') }}"
+        instance_ids: '{{ item.instance_id }}'
+      loop: "{{ ec2_stat.instances }}"
