--- a/ansible/ec2_deploy.yml
+++ b/ansible/ec2_deploy.yml
@@ -79,4 +79,4 @@
         aws_secret_key: "{{ lookup('env', 'AWS_SECRET_ACCESS_KEY') }}"
         security_token: "{{ lookup('env', 'AWS_SESSION_TOKEN') }}"
         instance_ids: '{{ item.instance_id }}'
-      loop: "{{ ec2_stat.instances }}"
+      loop: "{{ old_instances.instances }}"
