Drop instances to 1 from 3 to test terminating multiple old

--- a/ansible/ec2_deploy.yml
+++ b/ansible/ec2_deploy.yml
@@ -80,3 +80,5 @@
         security_token: "{{ lookup('env', 'AWS_SESSION_TOKEN') }}"
         instance_ids: '{{ item.instance_id }}'
       loop: "{{ old_instances.instances }}"
+      loop_control:
+        label: "{{ item.instance_id }}"
